--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR UW24 18221622
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
